welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type Bool
var fini:Bool = false
         ^