welcome.lessons.welcome.bdr.BDR.scala.code
var fini:Bool = false
while (!fini) {
  avance()
} 